fix feature create workload
